# rules_docker_repro

./: BUILD.bazel  README.md  WORKSPACE  go.mod  reproduce.sh
